<resources>
    <string name="app_name">LoboAndroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">UsernameHere</string>
    <string name="profession">ProfessionHere</string>

    <string name="alertCat">Choose alert category</string>
    <string name="alertReceiverGroup">Choose receiver group</string>
    <string name="sendAlertBtn">Send alert</string>

    <string name="catRadio1">Need assistance</string>
    <string name="catRadio2">Disturbance</string>
    <string name="catRadio3">Fire alert</string>

    <string name="recRadio1">All</string>
    <string name="recRadio2">Guards</string>
    <string name="recRadio3">Doctors</string>

    <string name="alertHistory">Alert history, choose range</string>
    <string name="alertHistoryBtn">Get alerts</string>

    <string name="hisRadio1">5 latest</string>
    <string name="hisRadio2">10 latest</string>
    <string name="hisRadio3">All</string>
</resources>
