<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <include
        android:id="@+id/toolBar"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alertCat"
        android:id="@+id/alertCat"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="115dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/catRadioGroup"
        android:layout_below="@+id/alertCat"
        android:layout_alignParentLeft="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catRadio1"
            android:id="@+id/catRadio1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catRadio2"
            android:id="@+id/catRadio2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catRadio3"
            android:id="@+id/catRadio3" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alertReceiverGroup"
        android:id="@+id/alertReceiverGroup"
        android:layout_below="@+id/catRadioGroup"
        android:layout_alignParentLeft="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recRadioGroup"
        android:layout_below="@+id/alertReceiverGroup"
        android:layout_alignParentLeft="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recRadio1"
            android:id="@+id/recRadio1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recRadio2"
            android:id="@+id/recRadio2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recRadio3"
            android:id="@+id/recRadio3" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendAlertBtn"
        android:id="@+id/sendAlertBtn"
        android:layout_below="@+id/recRadioGroup"
        android:layout_alignParentLeft="true"
        android:onClick="sendAlert" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alertHistory"
        android:id="@+id/alertHistory"
        android:layout_below="@+id/sendAlertBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10pt"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/hisRadioGroup"
        android:layout_below="@+id/alertHistory">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hisRadio1"
            android:id="@+id/hisRadio1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hisRadio2"
            android:id="@+id/hisRadio2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hisRadio3"
            android:id="@+id/hisRadio3" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertHistoryBtn"
        android:id="@+id/alertHistoryBtn"
        android:layout_below="@+id/hisRadioGroup"
        android:onClick="getAlertHistory"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alertHistoryView"
        android:layout_below="@+id/alertHistoryBtn" />

</RelativeLayout>